deploy/httproute/argo-rollouts/argo-rollouts-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "rollouts.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: argo-rollouts-dashboard
          port: 3100
          namespace: argo-rollouts
          weight: 1
